--- a/foundry.toml
+++ b/foundry.toml
@@ -2,6 +2,9 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+remappings = [
+  "@openzeppelin/contracts=lib/openzeppelin-contracts/contracts"
+]
 fs_permissions = [
   {access = "read", path = "./broadcast" },
   {access = "read", path = "./reports" },
