--- a/foundry.toml
+++ b/foundry.toml
@@ -11,5 +11,11 @@ fs_permissions = [
   {access = "read", path = "./reports" },
   {access = "read", path = "./img"}
 ]
+[fuzz]
+runs = 1000
+[invariant]
+runs = 128
+depth = 128
+fail_on_revert = false
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
